uporządkowanie plików projektu, dodanie controllera plików (pobieranie i przesyłanie plików na serwer),

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name = cloudDrive
 
 rsa.public-key = classpath:public.key
 rsa.private-key = classpath:private.key
+
+storage.location=D:\\Programowanie\\praktyki2\\files
