dodanie możliwości przesylania wielu plików na raz oraz przesyłania folderów, zwracanie odpowiednich kodów w odpowiedziach przy błędach

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name = cloudDrive
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 rsa.public-key = classpath:public.key
 rsa.private-key = classpath:private.key
